@@ -3,6 +3,8 @@ package ma.enset.tp_3.security.service;
 import lombok.AllArgsConstructor;
 import ma.enset.tp_3.security.entities.AppRole;
 import ma.enset.tp_3.security.entities.AppUser;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -11,6 +13,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -20,11 +23,11 @@ public class UserDetailServiceImpl implements UserDetailsService {
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         AppUser appUser = accountService.loadUserByUsername(username);
         if(appUser==null) throw new RuntimeException("User not Found");
-        List<String> appRoles = appUser.getAppRoles().stream().map(u->u.getRole()).toList();
+        List<GrantedAuthority> authorities = appUser.getAppRoles().stream().map(u -> new SimpleGrantedAuthority(u.getRole())).collect(Collectors.toList());
         UserDetails userDetails = User
                 .withUsername(appUser.getUsername())
                 .password(appUser.getPassword())
-                .roles(Arrays.toString(appRoles.toArray()))
+                .authorities(authorities)
                 .build();
        return userDetails;
     }
